syntax = "proto3";

package zksync.network.rpc;

enum Capability {
  reserved 5,6,7;
  reserved "GET_BATCH","PUSH_BATCH_STORE_STATE";
  CONSENSUS = 0;
  PING = 2;
  PUSH_VALIDATOR_ADDRS = 1;
  PUSH_BLOCK_STORE_STATE = 3;
  GET_BLOCK = 4;
  PUSH_BATCH_VOTES = 8;
  PUSH_BLOCK_STORE_STATE_V2 = 9;
}
